Update on intro.

--- a/edwin_2019/B1-ABSTRACT.tex
+++ b/edwin_2019/B1-ABSTRACT.tex
@@ -7,29 +7,24 @@
 
 
 
-伴随着移动应用迅猛的发展，研究人员开始关注如何分析移动应用的业务逻辑，了解应用的运行行为。
-不同于传统应用程序，Android应用程序采用的是基于事件驱动的系统架构和面向组件的编程模式，业务逻辑对回调函数和多线程交互的依赖性高。
-上述特性使得程序的业务逻辑分散在不同的代码片段（例如方法、线程、组件等）中，阻碍了应用程序执行过程的建模，对了解Android应用程序执行细节造成了挑战。
+作为市场占有率最高的智能手机操作系统，安卓系统吸引了无数开发者为其开发应用，也使各种各样与安卓应用及其研发相关的研究得以开展。
+然而，在浩如烟海的安卓应用研究中，针对仿冒应用的研究仍相当有限。
+有别于官方发布的正版应用，仿冒应用属于移动灰色产业的一环，其目的各异，难以一概而论，其行为特征更是不得而知。
+由于我们对移动灰色产业知之甚少，仿冒应用的产业链及其生态对我们仍是一个谜。
 
 
-
-为此，本文提出并实现了一个可用于生成Android应用程序动态函数调用图的系统——RunDroid。
-RunDroid使用源程序代码插桩获取用户方法的执行信息，通过运行时方法拦截获取获取系统方法的执行信息，并将信息以日志的形式保留下来。
-根据应用程序运行期间产生的日志信息，RunDroid能还原出应用的动态函数调用图。
-RunDroid构建的函数调用图不仅可反映函数间的调用关系，还能反映方法对象关系和方法间的触发关系，体现Android中Activity组件的生命周期，为程序分析工作提供必要的运行时信息。
+为了填补这一部分的空白，我们从现实的安卓应用市场中爬取了大量真实数据，对一批从工业界中找到的仿冒应用进行了已知的首个系统、全面的大规模实证研究。
+由于仿冒应用的模仿对象往往是较为热门的应用，我们按照排行榜确定了全网最受欢迎的前50个应用，然后使用网络爬虫搜集了与这批热门应用相关的超过150,000个应用样本作为研究对象，以进行全面的研究。
 
 
+本文呈现了我们对这批样本从三个不同视角进行探究的结果，其分别为：仿冒应用的基本特征，针对仿冒样本的量化分析，及仿冒应用的发展轨迹。
+三个视角由浅入深，从仿冒应用的基本信息特征开始，再将仿冒应用数据与其来源的应用市场结合，最后引入时间因素对数据进行挖掘分析。
+从三个不同视角的分析中，本文提供了包括仿冒应用命名倾向、仿冒应用作者对应用市场拦截的规避策略等珍贵的领域知识。
+本文还对数据中较为特别的样本作出了详尽的案例分析，除了可以印证上述的领域知识与发现之外，也能引起我们对现今应用市场生态环境的思考。
+最后，最后针对仿冒应用在应用市场上获得的评级、评论等用户反馈进行了一系列的分析与验证。
 
 
-在本文中，我们从开源社区F-Droid中下载9个开源应用程序，利用RunDroid产生动态函数调用图，统计调用图中的函数关系数量。
-实验结果显示函数触发关系在应用程序的执行过程中普遍存在，并且在业务逻辑中承担着主要的作用。
-同时，我们还将RunDroid产生的动态函数调用图和FlowDroid产生的静态函数调用图进行对比分析。
-相比FlowDroid，RunDroid产生的函数调用图能够准确地反映应用程序的执行过程，表现函数间的调用关系和触发关系，真实地还原Android Activity组件的生命周期变迁。
-最后，我们还将RunDroid和错误定位相结合，进行了探索性的实验。
-实验结果显示，RunDroid提供的函数调用图全面地反映了函数执行的因果关系。
-相比已有技术方案，RunDroid能够使得方法间的因果关系模型更完整，体现更多的程序依赖信息，有助于提升错误定位的准确度。
+我们希望本文可以为读者提供一个面向仿冒应用及其生态的清晰视角，并借此抛砖引玉，吸引更多科研人员投入到对安卓灰色产业的观察研究中。
 
 
-
-
-\sihao{\heiti{ 关键词:}} \xiaosi{Android，函数调用图，动态分析技术，生命周期，多线程}
+\sihao{\heiti{ 关键词:}} \xiaosi{Android应用程序, 仿冒应用, 实证研究, 数据分析}
