--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -97,11 +97,11 @@
 @online{GoogleP55:online,
 	title = {Google Play Store: number of apps 2018 | Statistic},
 	url ={https://www.statista.com/statistics/266210/number-of-available-applications-in-the-google-play-store/},
-		year={2018},
+	year={2018},
 	lastaccessed = {September 07,2018}
 }
 @online{Xposed,
-title = {Xposed Installer | Xposed Module Repository},
+	title = {Xposed Installer | Xposed Module Repository},
 	url={http://repo.xposed.info/module/de.robv.android.xposed.installer},
 	year={2017},
 	lastaccessed = {May 15,2017}
@@ -294,7 +294,7 @@ title = {Xposed Installer | Xposed Module Repository},
 	pages={97-102},
 	year={2017},
 }
-@misc{hoffmann2011eclemma,
+@online{hoffmann2011eclemma,
 	title={Eclemma-jacoco java code coverage library},
 	author={Hoffmann, Marc R and Janiczak, B and Mandrikov, E},
 	year={2011}
@@ -351,7 +351,7 @@ title = {Xposed Installer | Xposed Module Repository},
 	year = {2018},
 	note = {(Accessed on 08/08/2018)}
 }
-@misc{Measurea65:online,
+@online{Measurea65:online,
 	author = {},
 	title = {Measure app performance with Android Profiler  |  Android Developers},
 	url={https://developer.android.com/studio/profile/android-profiler},
@@ -359,7 +359,6 @@ title = {Xposed Installer | Xposed Module Repository},
 	year = {},
 	note = {(Accessed on 08/10/2018)}
 }
-
 @inproceedings{au2012pscout,
 	title={Pscout: analyzing the android permission specification},
 	author={Au, Kathy Wain Yee and Zhou, Yi Fan and Huang, Zhen and Lie, David},
@@ -639,12 +638,12 @@ title = {Xposed Installer | Xposed Module Repository},
 	url={https://developer.android.com/reference/android/app/Activity},
 	month = {09},
 	year = {2018},
-
+	
 }
 
 @online{HandlerA26:online,
 	title = {Handler  |  Android Developers},
-url={https://developer.android.com/reference/android/os/Handler},
+	url={https://developer.android.com/reference/android/os/Handler},
 	year = {2018},
 	lastaccessed = {Step. 25, 2018}
 }
@@ -797,17 +796,17 @@ url={https://developer.android.com/reference/android/os/Handler},
 }
 
 @inproceedings{sadeghi2017patdroid,
-title={Patdroid: permission-aware GUI testing of android},
-author={Sadeghi, Alireza and Jabbarvand, Reyhaneh and Malek, Sam},
-booktitle={Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering},
-pages={220--232},
-year={2017},
-organization={ACM}
+	title={Patdroid: permission-aware GUI testing of android},
+	author={Sadeghi, Alireza and Jabbarvand, Reyhaneh and Malek, Sam},
+	booktitle={Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering},
+	pages={220--232},
+	year={2017},
+	organization={ACM}
 }
 @online{maaaazan93,
 	author = {},
 	title = {maaaaz/androwarn: Yet another static code analyzer for malicious Android applications},
-url={https://github.com/maaaaz/androwarn},
+	url={https://github.com/maaaaz/androwarn},
 	year = {2018}
 }
 @online{iBotPeac46,
@@ -837,12 +836,352 @@ url={https://github.com/maaaaz/androwarn},
 	url={https://github.com/ac-pm/Inspeckage},
 	month = {},
 	year = {2018}
-	}
+}
 @online{TheAspecJ,
 	author = {},
 	title = {The AspectJ Project | The Eclipse Foundation},
-url={https://www.eclipse.org/aspectj/},
+	url={https://www.eclipse.org/aspectj/},
 	month = {},
 	year = {2018},
 	note = {(Accessed on 10/03/2018)}
 }
+
+% Edwin
+@article{chen2018automated,
+	title={Automated poisoning attacks and defenses in malware detection systems: An adversarial machine learning approach},
+	author={Chen, Sen and Xue, Minhui and Fan, Lingling and Hao, Shuang and Xu, Lihua and Zhu, Haojin and Li, Bo},
+	journal={computers \& security},
+	volume={73},
+	pages={326--344},
+	year={2018},
+	publisher={Elsevier}
+}
+
+@inproceedings{luo2016repackage,
+	title={Repackage-proofing android apps},
+	author={Luo, Lannan and Fu, Yu and Wu, Dinghao and Zhu, Sencun and Liu, Peng},
+	booktitle={2016 46th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)},
+	pages={550--561},
+	year={2016},
+	organization={IEEE}
+}
+
+@inproceedings{chen2016towards,
+	title={Towards adversarial detection of mobile malware: poster},
+	author={Chen, Sen and Xue, Minhui and Xu, Lihua},
+	booktitle={Proceedings of the 22nd Annual International Conference on Mobile Computing and Networking},
+	pages={415--416},
+	year={2016},
+	organization={ACM}
+}
+
+@inproceedings{fan2016poster,
+	title={POSTER: Accuracy vs. Time Cost: Detecting {Android} Malware through Pareto Ensemble Pruning},
+	author={Fan, Lingling and Xue, Minhui and Chen, Sen and Xu, Lihua and Zhu, Haojin},
+	booktitle={Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+	pages={1748--1750},
+	year={2016},
+	organization={ACM}
+}
+
+@inproceedings{chen2018mobile,
+	title={Are mobile banking apps secure? what can be improved?},
+	author={Chen, Sen and Su, Ting and Fan, Lingling and Meng, Guozhu and Xue, Minhui and Liu, Yang and Xu, Lihua},
+	booktitle={Proceedings of the 2018 26th ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering},
+	pages={797--802},
+	year={2018},
+	organization={ACM}
+}
+
+@article{chen2018ausera,
+	title={AUSERA: Large-Scale Automated Security Risk Assessment of Global Mobile Banking Apps},
+	author={Chen, Sen and Meng, Guozhu and Su, Ting and Fan, Lingling and Xue, Yinxing and Liu, Yang and Xu, Lihua and Xue, Minhui and Li, Bo and Hao, Shuang},
+	journal={arXiv preprint arXiv:1805.05236},
+	year={2018}
+}
+
+@inproceedings{storydroid,
+	author = {Sen Chen and Lingling Fan and Chunyang Chen and Ting Su and Weihe Li and Yang Liu and Lihua Xu},
+	title = {StoryDroid: Automated Generation of Storyboard for {Android} Apps},
+	booktitle = {Proceedings of the 41th ACM/IEEE International Conference on Software Engineering, {ICSE} 2019},
+	pages = {},
+	year = {2019}
+}
+
+@article{fan2018large,
+	title={Large-Scale Analysis of Framework-Specific Exceptions in Android Apps},
+	author={Fan, Lingling and Su, Ting and Chen, Sen and Meng, Guozhu and Liu, Yang and Xu, Lihua and Pu, Geguang and Su, Zhendong},
+	journal={Proceedings of the 40th International Conference on Software Engineering (ICSE)},
+	pages={408--419},
+	year={2018},
+	organization={ACM}
+}
+
+@inproceedings{fan2018efficiently,
+	title={Efficiently manifesting asynchronous programming errors in Android apps},
+	author={Fan, Lingling and Su, Ting and Chen, Sen and Meng, Guozhu and Liu, Yang and Xu, Lihua and Pu, Geguang},
+	booktitle={Proceedings of the 33rd ACM/IEEE International Conference on Automated Software Engineering (ASE)},
+	pages={486--497},
+	year={2018},
+	organization={ACM}
+}
+
+@inproceedings{yin2007panorama,
+	title={Panorama: capturing system-wide information flow for malware detection and analysis},
+	author={Yin, Heng and Song, Dawn and Egele, Manuel and Kruegel, Christopher and Kirda, Engin},
+	booktitle={Proceedings of the 14th ACM conference on Computer and communications security},
+	pages={116--127},
+	year={2007},
+	organization={ACM}
+}
+
+@inproceedings{wasserman2010software,
+	title={Software engineering issues for mobile application development},
+	author={Wasserman, Anthony I},
+	booktitle={Proceedings of the FSE/SDP workshop on Future of software engineering research},
+	pages={397--400},
+	year={2010},
+	organization={ACM}
+}
+
+@inproceedings{chen2016stormdroid,
+	title={Stormdroid: A streaminglized machine learning-based system for detecting android malware},
+	author={Chen, Sen and Xue, Minhui and Tang, Zhushou and Xu, Lihua and Zhu, Haojin},
+	booktitle={Proceedings of the 11th ACM on Asia Conference on Computer and Communications Security},
+	pages={377--388},
+	year={2016},
+	organization={ACM}
+}
+
+@article{Andow2016ASO,
+	title={A Study of Grayware on {Google Play}},
+	author={Benjamin Andow and Adwait Nadkarni and Blake Bassett and William Enck and Tao Xie},
+	journal={2016 IEEE Security and Privacy Workshops (SPW)},
+	year={2016},
+	pages={224-233}
+}
+
+
+@article{Zhou2012DissectingAM,
+	title={Dissecting {Android} Malware: Characterization and Evolution},
+	author={Yajin Zhou and Xuxian Jiang},
+	journal={2012 IEEE Symposium on Security and Privacy},
+	year={2012},
+	pages={95-109}
+}
+
+@inproceedings{Felt2011ASO,
+	title={A survey of mobile malware in the wild},
+	author={Adrienne Porter Felt and Matthew Finifter and Erika Chin and Steve Hanna and David A. Wagner},
+	booktitle={SPSM@CCS},
+	year={2011}
+}
+
+
+@inproceedings{DroidMOSS,
+	title={Detecting repackaged smartphone applications in third-party android marketplaces},
+	author={Wu Zhou and Yajin Zhou and Xuxian Jiang and Peng Ning},
+	booktitle={CODASPY},
+	year={2012}
+}
+
+@inproceedings{Zheng2013DroidAnalyticsA,
+	title={DroidAnalytics : A Signature Based Analytic System to Collect , Extract , Analyze and Associate {Android}},
+	author={Min Zheng and Mingshen Sun and John C. S. Lui},
+	year={2013}
+}
+
+@inproceedings{levenshtein1966binary,
+	title={Binary codes capable of correcting deletions, insertions, and reversals},
+	author={Levenshtein, Vladimir I},
+	booktitle={Soviet physics doklady},
+	volume={10},
+	number={8},
+	pages={707--710},
+	year={1966}
+}
+
+@inproceedings{CLANdroid,
+	title={On automatically detecting similar {Android} apps},
+	author={Linares-V{\'a}squez, Mario and Holtzhauer, Andrew and Poshyvanyk, Denys},
+	booktitle={Program Comprehension (ICPC), 2016 IEEE 24th International Conference on},
+	pages={1--10},
+	year={2016},
+	organization={IEEE}
+}
+
+@inproceedings{CodeMatch,
+	title={CodeMatch: obfuscation won't conceal your repackaged app},
+	author={Glanz, Leonid and Amann, Sven and Eichberg, Michael and Reif, Michael and Hermann, Ben and Lerch, Johannes and Mezini, Mira},
+	booktitle={Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering},
+	pages={638--648},
+	year={2017},
+	organization={ACM}
+}
+
+@inproceedings{Wukong,
+	title={WuKong: a scalable and accurate two-phase approach to {Android} app clone detection},
+	author={Wang, Haoyu and Guo, Yao and Ma, Ziang and Chen, Xiangqun},
+	booktitle={Proceedings of the 2015 International Symposium on Software Testing and Analysis},
+	pages={71--82},
+	year={2015},
+	organization={ACM}
+}
+
+@inproceedings{DNADroid,
+	title={Attack of the clones: Detecting cloned applications on {Android} markets},
+	author={Crussell, Jonathan and Gibler, Clint and Chen, Hao},
+	booktitle={European Symposium on Research in Computer Security},
+	pages={37--54},
+	year={2012},
+	organization={Springer}
+}
+
+@inproceedings{AnDarwin,
+	title={Scalable semantics-based detection of similar {Android} applications},
+	author={Crussell, Jonathan and Gibler, Clint and Chen, Hao},
+	booktitle={Proc. of ESORICS},
+	volume={13},
+	year={2013},
+	organization={Citeseer}
+}
+
+@inproceedings{Centroid,
+	title={Achieving accuracy and scalability simultaneously in detecting application clones on {Android} markets},
+	author={Chen, Kai and Liu, Peng and Zhang, Yingjun},
+	booktitle={Proceedings of the 36th International Conference on Software Engineering},
+	pages={175--186},
+	year={2014},
+	organization={ACM}
+}
+
+@inproceedings{ViewDroid,
+	title={ViewDroid: towards obfuscation-resilient mobile application repackaging detection},
+	author={Fangfang Zhang and Heqing Huang and Sencun Zhu and Dinghao Wu and Peng Liu},
+	booktitle={WISEC},
+	year={2014}
+}
+
+@online{StatistaMktShare,
+	author = {Arne Holst},
+	year = {2019},
+	url = {https://www.statista.com/statistics/272698/global-market-share-held-by-mobile-operating-systems-since-2009/},
+	citedate = {January 4, 2020},
+	title = {Market share of mobile operating systems worldwide 2012-2019}
+}
+
+@online{StatistaAppNumber,
+	author = {J. Clement},
+	year = {2019},
+	url = {https://www.statista.com/statistics/266210/number-of-available-applications-in-the-google-play-store/},
+	citedate = {January 4, 2020},
+	title = {Number of available applications in the Google Play Store from December 2009 to December 2019}
+}
+
+@techreport{McAfee_mobile_thread_report,
+	author = {McAfee},
+	year = {2018},
+	url = {https://www.mcafee.com/enterprise/en-us/assets/reports/rp-mobile-threat-report-2018.pdf},
+	citedate = {September 26, 2018},
+	title = {McAfee Mobile Threat Report Q1, 2018}
+}
+
+@online{LIFTOFF_report,
+	author = {LIFTOFF},
+	year = {2018},
+	url = {https://cdn2.hubspot.net/hubfs/434414/Reports/2018%20Gaming%20Apps/Liftoff_2018_Mobile_Gaming_Apps_Report_Aug.pdf},
+	citedate = {September 26, 2018},
+	title = {{Mobile Gaming Apps Report}}
+}
+
+@online{virustotal,
+	title = {VirusTotal},
+	url = {https://www.virustotal.com/},
+	citedate = {September 26, 2018}
+}
+
+@online{yiguanqianfan,
+	title = {Analysys {Figure}},
+	url = {http://zhishu.analysys.cn/},
+	citedate = {September 26, 2018}
+}
+
+% Reports
+
+@online{microtrend_Fake_Apps_Feigning_Legitimacy,
+	author = {Symphony, Luo and Peter, Yan},
+	year = {2014},
+	url = {https://www.trendmicro.de/cloud-content/us/pdfs/security-intelligence/white-papers/wp-fake-apps.pdf?cm_mmc=Social:IT-_-Facebook-_-FBTM-IT-_-sf28603333},
+	citedate = {September 26, 2018},
+	title = {Fake Apps: Feigning Legitimacy}
+}
+
+@online{microtrend_Fake_Banking_App,
+	author = {Simon, Huang},
+	year = {2014},
+	url = {https://www.trendmicro.de/cloud-content/us/pdfs/security-intelligence/white-papers/wp-the-south-korean-fake-banking-app-scam.pdf},
+	citedate = {September 26, 2018},
+	title = {The South Korean Fake Banking App Scam}
+}
+
+@online{comodo_report,
+	author = {Comodo},
+	year = {2018},
+	url = {https://blog.comodo.com/comodo-news/comodo-cybersecurity-q1-2018-global-malware-report/},
+	citedate = {September 26, 2018},
+	title = {Comodo Cybersecurity Q1 2018 Global Malware Report: cybercriminals follow the money, cryptominers leap ahead of ransomware}
+}
+
+@online{android_security_bulletin,
+	author = {Google},
+	year = {2017},
+	url = {https://source.android.com/security/bulletin/2017-12-01},
+	citedate = {September 26, 2018},
+	title = {Android Security Bulletin—December 2017}
+}
+
+@online{guardsquare_fake_app,
+	author = {Guardsquare},
+	year = {2017},
+	url = {https://www.guardsquare.com/en/blog/fake-mobile-apps-growing-threat},
+	citedate = {September 26, 2018},
+	title = {Fake mobile apps, a growing threat}
+}
+
+% News
+
+@online{wannacry_bitcoin_news,
+	author = {Jonas, Borchgrevink},
+	year = {2017},
+	url = {https://hacked.com/global-malware-campaign-wannacry-affecting-bitcoins-price/},
+	citedate = {September 26, 2018},
+	title = {Global Malware Campaign WannaCry is Affecting {Bitcoin's} Price}
+}
+
+@online{ransomware,
+	author = {Wikipedia},
+	year = {2018},
+	url = {https://en.wikipedia.org/wiki/Ransomware},
+	citedate = {September 26, 2018},
+	title = {Ransomware}
+}
+
+@online{Baiduappstore,
+	title = {Baidu {App Store}},
+	url = {https://shouji.baidu.com/},
+	citedate = {September 26, 2018}
+}
+
+@online{Hiapk,
+	title = {Hiapk},
+	url = {http://apk.hiapk.com/},
+	citedate = {September 26, 2018}
+}
+
+@online{Myapp,
+	title = {Myapp},
+	url = {http://sj.qq.com/myapp/},
+	citedate = {September 26, 2018}
+}
+
+
