--- a/edwin_2019/D3-MYACHIEVEMENTS.tex
+++ b/edwin_2019/D3-MYACHIEVEMENTS.tex
@@ -18,7 +18,7 @@
 
 \begin{enumerate}
 	
-	\item Chongbin Tang, Sen Chen, Lingling Fan, Lihua Xu, Yang Liu, Zhushou Tang, and Liang Dou, ``A large-scale empirical study on industrial fake apps,'' in \textit{Proceedings of the 41st International Conference on Software Engineering: Software Engineering in Practice,} IEEE Press, 2019: 183-192. (发表于CCF软件工程方向顶级会议ICSE2019)
+	\item Chongbin Tang, Sen Chen, Lingling Fan, Lihua Xu, Yang Liu, Zhushou Tang, and Liang Dou, ``A large-scale empirical study on industrial fake apps,'' in \textit{Proceedings of the 41st International Conference on Software Engineering: Software Engineering in Practice,} IEEE Press, 2019: 183-192. (发表于CCF A类推荐学术会议, 软件工程方向顶级会议ICSE2019)
 	
 \end{enumerate}
 
